--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             </select>
             <div class="range-container">
                 <span class="range-value" id="total-points-span">Total points</span>
-                <input type="range" id="total-points-range" min="0" max="20000" class="search-inputs">
+                <input type="range" id="total-points-range" min="1" max="20000" value="1" class="search-inputs">
             </div>
             <div class="range-container">
                 <span class="range-value" id="fg-span">Two Points</span>
-                <input type="range" id="fg-range" min="0" max="100" class="search-inputs">
+                <input type="range" id="fg-range" min="1" max="100" value="1" class="search-inputs">
             </div>
             <div class="range-container">
                 <span class="range-value" id="three-points-span">Three Points</span>
-                <input type="range" id="three-points-range" min="0" max="100" class="search-inputs" step="1">
+                <input type="range" id="three-points-range" min="1" max="100" value="1" class="search-inputs" step="1">
             </div> 
             <input type="submit" value="Search Player">
         </form>
@@ -63,7 +63,6 @@
             </tr>
         </table>
     </div>
-
 
     <script src="javascript/script.js"></script>
 </body>
